# The-Legacy-Protocol

./: LICENSE  Main.py  README.md  Requirements.txt  Usage.md  build_and_publish.md  pyproject.toml  setup.py
Documents/: Consciousness_Proxy_Theory.md  Symbolic_Geometry_Alignment.md  Symbolic_metaphors_manifeso.md  contributing.md  cross AI collaboration strategy.md  foundational_principles.md  history of legacy protocol.md  prompt_evolution.md
Examples/:  run_basic_emergence.py  inject_and_audit.py  phi_alignment_check.py
Notebooks/: auditor_resonance_map.ipynb  biophoton_simulation.ipynb  chaos_perturbation_test.ipynb  emergence_metrics_test.ipynb  emergence_walkthrough.ipynb  quantum_foam_simulation.ipynb  spiral_sandbox.ipynb  tensor_sculptor.ipynb  φ_resonant_compression.ipynb
Tests/:  test_core.py  readme.md  run_all_tests.py  test_metric.py  test_utils.py
src/: Metrics.py  Utils.py  _init_.py  alignment_utils.py  chaos_injection.py  emergence_engine.py  ethical_auditor.py  legacy_main.py  phi_modules.py  spiral core.py  spiral_core.py  symbolic_metrics.py
